Small addon fix of text wrapping in issue tasks links list

--- a/evateam-compact.user.css
+++ b/evateam-compact.user.css
@@ -208,6 +208,8 @@
 	}
 	.item-link {
 		overflow: visible !important;
+		white-space: normal !important;
+		hyphens: auto;
 	}
 
 	/** Task view **/
